syntax = "proto3";
package kratos.api;

option go_package = "Admin/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Registry registry = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    int32 db = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Database database = 1;
  Redis redis = 2;
}

message Registry {
  message Nacos {
    message Client {
      string namespace = 1;
      string address = 2;
      int32 port = 3;
      int32 grpc_port = 4;
      string log_dir = 5;
      string cache_dir = 6;
      string username = 7;
      string password = 8;
    }
    message Service {
      string ip = 1;
      int32 port = 2;
      int32 grpc_port = 3;
      int32 weight = 4;
      bool enabled = 5;
      bool healthy = 6;
      string name = 7;
      string group = 8;
      bool ephemeral = 9;
    }
    Client client = 1;
    Service service = 2;
  }
  Nacos nacos = 1;
}
